--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   deps:
-    name: "Setup"
+    name: Setup
     timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
@@ -21,6 +21,8 @@ jobs:
       with:
         elixir-version: '1.17.3'
         otp-version: '26.2.1'
+    - name: Restore dependencies cache
+      uses: actions/cache@v3
       with:
         path: deps
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
